--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "bun --hot run --watch app.ts",
     "devv": "bun run --watch app.ts",
-    "build": "bun build ./app.ts --compile"
+    "build": "bun build ./app.ts",
+    "compile": "bun build ./app.ts --compile"
+
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
